# stocks-cluster

./: pyproject.toml
data/: report-periods.csv  stock-list.csv
data/financials/AADI/annual/: balance_sheet.html  balance_sheet_0.csv  balance_sheet_1.csv  balance_sheet_2.csv  balance_sheet_3.csv  cash_flow_statement.html  cash_flow_statement_0.csv  cash_flow_statement_1.csv  income_statement.html  income_statement_0.csv  income_statement_1.csv
data/financials/AALI/annual/: balance_sheet.html  balance_sheet_0.csv  balance_sheet_1.csv  balance_sheet_2.csv  balance_sheet_3.csv  cash_flow_statement.html  cash_flow_statement_0.csv  cash_flow_statement_1.csv  income_statement.html  income_statement_0.csv  income_statement_1.csv
data/financials/ABBA/annual/: balance_sheet.html  balance_sheet_0.csv  balance_sheet_1.csv  balance_sheet_2.csv  balance_sheet_3.csv  cash_flow_statement.html  cash_flow_statement_0.csv  cash_flow_statement_1.csv  income_statement.html  income_statement_0.csv  income_statement_1.csv
data/financials/ABDA/annual/: balance_sheet.html  balance_sheet_0.csv  balance_sheet_1.csv  balance_sheet_2.csv  balance_sheet_3.csv  cash_flow_statement.html  cash_flow_statement_0.csv  cash_flow_statement_1.csv  income_statement.html  income_statement_0.csv  income_statement_1.csv
data/financials/ABMM/annual/: balance_sheet.html  balance_sheet_0.csv  balance_sheet_1.csv  balance_sheet_2.csv  balance_sheet_3.csv  cash_flow_statement.html  cash_flow_statement_0.csv  cash_flow_statement_1.csv  (+3 more)
notebooks/: .env.sample  clustering.ipynb  preprocess.ipynb  scrape.ipynb
(+10461 files in other folders)
