[project]
name = "stocks_cluster"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad Naufal", email = "me@falkia34.dev"}
]
requires-python = "^3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "stocks_cluster", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
